# Generated by Django 5.2.4 on 2025-07-07 16:33

import django.db.models.deletion
import django.utils.timezone
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Device',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('status', models.CharField()),
                ('description', models.CharField()),
            ],
        ),
        migrations.CreateModel(
            name='DeviceStateProperty',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField()),
            ],
        ),
        migrations.CreateModel(
            name='DeviceType',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nams', models.CharField()),
            ],
        ),
        migrations.CreateModel(
            name='DeviceStateLedger',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('timestamp', models.DateTimeField(default=django.utils.timezone.now)),
                ('serialized_value', models.CharField()),
                ('device', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='bff.device')),
                ('state_property', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='bff.devicestateproperty')),
            ],
        ),
        migrations.AddField(
            model_name='devicestateproperty',
            name='device_type',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='bff.devicetype'),
        ),
        migrations.AddField(
            model_name='device',
            name='device_type',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='bff.devicetype'),
        ),
    ]
